<resources>
    <string name="app_name">Meridian Project</string>
    <string name="password_warning">Password MustContain 8 Letters</string>
    <string name="don_t_have_an_account_sign_up">Don`t have an account? Sign-up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
</resources>